[package]
name = "ngkv"
version = "0.0.0"
authors = ["zhongjn <zhongjn0@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal_fsm = { path = "../wal_fsm", version = "0.0.0" }
# serde = { version = "1.0", features = ["derive"] }
# bincode = "1.3.1"