[package]
name = "ngkv"
version = "0.0.0"
authors = ["zhongjn <zhongjn0@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal_fsm = { path = "../wal_fsm", version = "0.0.0" }
itertools = "0.10.0"
byteorder = "1.4.2"
crc32fast = "1.2.1"
log = "0.4.13"
thiserror = "1.0.23"

[dev-dependencies]
rand = "0.8.3"