[package]
name = "ngkv"
version = "0.0.0"
authors = ["zhongjn <zhongjn0@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal_fsm = { path = "../wal_fsm", version = "0.0.0" }
stdx = { path = "../stdx", version = "0.0.0" }
itertools = "0.10.0"
byteorder = "1.4.2"
crc32fast = "1.2.1"
log = "0.4.13"
thiserror = "1.0.23"
once_cell = "1.5.2"
bincode = "1.3.1"
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
env_logger = "0.8.2"
chrono = "0.4.19"
num = "0.3.1"

[dev-dependencies]
rand = "0.8.3"
itertools = "0.10.0"
tempdir = "0.3.7"
ctor = "0.1.18"