[package]
name = "wal_fsm"
version = "0.0.0"
authors = ["zhongjn <zhongjn0@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
once_cell = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.38"
bincode = "1.3.1"
smart-default = "0.6.0"
itertools = "0.10.0"
byteorder = "1.4.2"
crc32fast = "1.2.1"
thiserror = "1.0.23"

[dev-dependencies]
mockall = "0.9.0"
tempdir = "0.3.7"