[package]
name = "wal_fsm"
version = "0.0.0"
authors = ["zhongjn <zhongjn0@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdx = { path = "../stdx", version = "0.0.0" }
crossbeam = "0.8.0"
once_cell = "1.5.2"
smart-default = "0.6.0"
itertools = "0.10.0"
byteorder = "1.4.2"
crc32fast = "1.2.1"
log = "0.4.13"
env_logger = "0.8.2"
chrono = "0.4.19"
thiserror = "1.0.23"
never = "0.1.0"

[dev-dependencies]
mockall = "0.9.0"
tempdir = "0.3.7"
ctor = "0.1.18"